--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="icon" type="image/png" href="flipkart-plus.png">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -30,8 +29,7 @@
 
   <!--Bootstrap JS CDN-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-  <title>Flipcart Clone</title>
-
+  <title>React App</title>
   <!-- razor pay -->
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </head>
